# loom

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
dashboard/: __init__.py  app.py
dashboard/templates/: base.html  compose.html  error.html  home.html  run_detail.html  runs.html
docs/: README.md  architecture.md  cli.md  contracts.md  dashboard.md  design-brief.md  extending.md  glossary.md  m1-design.md  m3-design.md  m5-design.md  safety-model.md
locks/: toy-ev-l7.lock.json
loom/: __init__.py  catalog.py  cli.py  errors.py  module.py  paths.py  run.py  schema.py
loom/assurance/: __init__.py  deps.py  gsn.py  sbom.py
loom/bus/: __init__.py  base.py  kuksa.py  shim.py
loom/compose/: __init__.py  loader.py  model.py  resolve.py
loom/contracts/: __init__.py  checker.py  loader.py  model.py  report.py
loom/deploy/: __init__.py  ankaios.py
loom/monitors/: __init__.py  engine.py  predicate.py
loom/orchestrator/: __init__.py  _loop.py  ankaios.py  base.py  compose.py  inprocess.py
loom/plant/: __init__.py  base.py  loader.py
loom/safety/: __init__.py  gate.py
loom/sim/: __init__.py  faults.py  scenario.py  stimulus.py  trace.py
modules/adas/: contract.yaml  service.py
modules/bms/: Dockerfile  contract.custom_x.yaml  contract.yaml  service.py
modules/bms/sbom/: .gitkeep
modules/body/: contract.yaml  service.py
modules/hmi/: contract.custom.yaml  contract.yaml  service.py
modules/powertrain/: contract.custom_units.yaml  contract.yaml  service.py
plant/longitudinal/: plant.py
plant/motoquant/: plant.py
scenarios/: sensor_dropout_test.yaml  urban_drive.yaml
spec/: vehicle.broken.yaml  vehicle.broken_units.yaml  vehicle.example.yaml  vehicle.m0.yaml  vehicle.motoquant.yaml  vehicle.swap_bms.yaml  vehicle.swap_hmi.yaml
spec/schema/: composition.schema.json  contract.schema.json
tests/: test_audit_fixes.py  test_bus_shim.py  test_compose.py  test_contracts.py  test_m0_run.py  test_m1_loop.py  test_m1_modules.py  test_m2_checker.py  test_m3_acceptance.py  test_m3_faults.py  test_m3_monitors.py  test_m4_gate.py  test_m5_assurance.py  test_m6_ankaios.py  test_m6_compose_kuksa.py  test_m6_dashboard.py  test_m6_motoquant.py  test_predicate.py
