[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loom"
version = "0.0.1"
description = "Loom — open vehicle composition & virtual-validation framework"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "typer>=0.12",
    "jsonschema>=4.21",
    "pyyaml>=6.0",
    "cyclonedx-python-lib>=7.0",
    "fmpy>=0.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]
dashboard = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "python-multipart>=0.0.9", "jinja2>=3.1"]

[project.scripts]
loom = "loom.cli:main"

[tool.setuptools.packages.find]
include = ["loom*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
